feat(v3.0): Major refactoring - architecture + tests + suppliers
Refonte majeure MAGSAV 3.0 : 250+ fichiers, 15,000+ lignes

CORE ARCHITECTURE
- ApplicationContext: JavaFX dependency injection
- CategoryManager: Centralized equipment categories
- NavigationManager: Navigation with history/routes
- GlobalSearchManager: Unified multi-module search

BACKEND NEW FEATURES
- GlobalExceptionHandler: REST API error handling
- Supplier System: Complete controllers/services/repositories
- BrandController: 50+ LOCMAT brands management
- LocmatImportController: Import LOCMAT_Materiel.xlsx
- MagsavBusinessException + ErrorResponse DTO

INTEGRATION TESTS (new)
- BasicIntegrationTest: Spring Boot context validation
- EquipmentControllerIntegrationTest: 9 CRUD tests
- ServiceRequestControllerIntegrationTest: 10 workflow tests
- application-test.properties: H2 in-memory configuration

DATA MODELS
- Project, Personnel, Vehicle, Equipment (desktop models)
- Brand entity: Equipment brands (name, prefix, category)
- CatalogItem, MaterialRequestItem, OrderAllocation
- GroupedOrder, MaterialRequest, SupplierOrder
- Enums: RequestPriority, OrderStatus, ProjectType

UI COMPONENTS
- EntityDetailView: Reusable detail cards (read-only)
- BaseManagerView: Abstract class for management views
- ToolbarUtils, TableUtils, UIUtils: Reusable UI utilities
- VehicleDetailView, EquipmentDetailView, PersonnelDetailView
- VehicleAvailabilityView: Vehicle planning calendar
- VehicleListView: Vehicle table with filters

SUPPLIER SYSTEM (new module)
- SupplierManagerViewSimple: Suppliers management
- MaterialRequestManagerViewSimple: Material requests workflow
- GroupedOrderManagerViewSimple: Grouped orders optimization
- BrandConfigView: 50+ LOCMAT brands configuration
- BrandMigrationView: LOCMAT to MAGSAV data migration
- LocmatImportDialog: Import LOCMAT_Materiel.xlsx
- supplier-system.css: Dedicated styles

SERVICES
- EquipmentFilterService: Advanced equipment filtering
- LocmatImportService: LOCMAT cat